--- a/template/package.json
+++ b/template/package.json
@@ -45,14 +45,15 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "formik": "^2.2.9",
-    "i18next": "^21.8.13",
+    "i18next": "^21.8.14",
     "intl-pluralrules": "^1.3.1",
     "lodash-es": "^4.17.21",
-    "native-base": "^3.4.8",
+    "native-base": "^3.4.9",
     "react": "18.2.0",
-    "react-i18next": "^11.18.0",
+    "react-i18next": "^11.18.1",
     "react-native": "0.69.1",
     "react-native-config": "^1.4.6",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.2",
@@ -60,9 +61,9 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "^12.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-query": "^3.39.1",
+    "react-query": "^3.39.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -73,27 +74,34 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@react-native-community/eslint-config": "^3.0.3",
-    "@types/jest": "^28.1.4",
+    "@types/jest": "^28.1.6",
+    "@types/react": "^18.0.15",
+    "@types/react-native": "^0.69.3",
     "@types/tinycolor2": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "babel-jest": "^28.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "babel-jest": "^28.1.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "detox": "^19.7.1",
     "dotenv": "^16.0.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-module-resolver": "^1.4.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.2",
+    "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "metro-react-native-babel-preset": "^0.71.3",
     "patch-package": "^6.4.7",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "react-native-flipper": "^0.153.0",
+    "react-native-flipper": "^0.154.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-query-native-devtools": "^4.0.0",
     "react-test-renderer": "18.2.0",
