chore: upgrade packages

--- a/template/android/fastlane/.env.example
+++ b/template/android/fastlane/.env.example
@@ -4,9 +4,14 @@ SLACK_URL=''
 FASTLANE_USER=''
 MATCH_GIT_BASIC_AUTHORIZATION='base64(<github username>:<user token>)'
 MATCH_PASSWORD=''
-MATCH_KEYCHAIN_PASSWORD=''
 
-MYAPP_UPLOAD_STORE_FILE=
+FIREBASE_APP_ID=
+GOOGLE_APPLICATION_CREDENTIALS=
+
+PACKAGE_NAME=
+PLAYSTORE_API_FILE=<absolute path to project/android/fastlane/credentials/api.json>
+
+MYAPP_UPLOAD_STORE_FILE=<absolute path to project/android/fastlane/credentials/release.keystore>
 MYAPP_UPLOAD_KEY_ALIAS=
 MYAPP_UPLOAD_STORE_PASSWORD=
 MYAPP_UPLOAD_KEY_PASSWORD=
