--- a/template/package.json
+++ b/template/package.json
@@ -18,8 +18,10 @@
     "adb": "adb reverse tcp:8081 tcp:8081",
     "clean:android": "cd ./android/ && ./gradlew clean && rm -fr ../android/detox/build/",
     "prepare": "husky install",
-    "ios:beta": "cd ios && bundle exec fastlane ios distribute_to_testflight",
-    "android:beta": "cd android && bundle exec fastlane android distribute_to_playstore",
+    "release:ios:staging": "cd ios && bundle exec fastlane ios distribute_to_testflight --env staging",
+    "release:ios:prod": "cd ios && bundle exec fastlane ios distribute_to_testflight --env production",
+    "release:android:staging": "cd android && bundle exec fastlane android distribute_to_firebase  --env staging",
+    "release:android:prod": "cd android && bundle exec fastlane android distribute_to_playstore  --env production",
     "test:ios-debug:reuse": "detox test -c ios.sim.debug --reuse",
     "test:ios-debug": "detox test -c ios.sim.debug",
     "test:ios-release": "detox test -c ios.sim.release",
@@ -33,80 +35,94 @@
     "build:android-debug": "detox build -c android.emu.debug",
     "build:android-release": "detox build -c android.emu.release",
     "lint:deadcode": "ts-prune",
-    "postinstall": "patch-package && node ./scripts/post-install"
+    "postinstall": "patch-package && node ./scripts/post-install",
+    "deeplink:ios": "npx uri-scheme open --ios",
+    "deeplink:android": "npx uri-scheme open --android",
+    "ios:cleanup": "cd ios && gem cleanup && cd .."
   },
   "dependencies": {
-    "@faker-js/faker": "^7.4.0",
+    "@faker-js/faker": "^7.5.0",
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@native-base/icons": "^0.0.11",
-    "@react-native-async-storage/async-storage": "^1.17.9",
-    "@react-native-community/netinfo": "^9.3.0",
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
-    "@react-navigation/stack": "^6.2.2",
+    "@react-native-community/blur": "^4.2.0",
+    "@react-native-community/netinfo": "^9.3.2",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.1",
+    "@tanstack/query-async-storage-persister": "^4.8.0",
+    "@tanstack/react-query": "^4.8.0",
+    "@tanstack/react-query-persist-client": "^4.8.0",
     "formik": "^2.2.9",
-    "i18next": "^21.9.1",
+    "i18next": "^21.9.2",
     "intl-pluralrules": "^1.3.1",
     "lodash-es": "^4.17.21",
-    "native-base": "^3.4.13",
+    "native-base": "^3.4.17",
     "react": "18.2.0",
-    "react-i18next": "^11.18.4",
-    "react-native": "0.69.4",
+    "react-i18next": "^11.18.6",
+    "react-native": "^0.70.1",
     "react-native-config": "^1.4.6",
-    "react-native-fast-image": "^8.5.11",
-    "react-native-gesture-handler": "^2.5.0",
+    "react-native-device-info": "^10.2.0",
+    "react-native-fast-image": "^8.6.1",
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-localize": "^2.2.3",
+    "react-native-localize": "^2.2.4",
+    "react-native-logs": "^5.0.1",
     "react-native-markdown-display": "^7.0.0-alpha.2",
-    "react-native-reanimated": "^2.9.1",
-    "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.16.0",
-    "react-native-svg": "^13.0.0",
+    "react-native-mmkv": "^2.4.3",
+    "react-native-orientation-locker": "^1.5.0",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.2.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
-    "react-query": "^3.39.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/plugin-transform-react-jsx": "^7.18.10",
+    "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
     "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.18.9",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
+    "@babel/runtime": "^7.19.0",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@react-native-community/eslint-config": "^3.1.0",
-    "@types/jest": "^28.1.7",
-    "@types/react": "^18.0.17",
-    "@types/react-native": "^0.69.5",
+    "@types/jest": "^29.1.1",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.4",
     "@types/tinycolor2": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "babel-jest": "^28.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "babel-jest": "^29.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "detox": "^19.10.0",
-    "dotenv": "^16.0.1",
-    "eslint": "^8.22.0",
+    "detox": "^19.12.3",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.8.5",
-    "eslint-plugin-module-resolver": "^1.4.0",
+    "eslint-plugin-jest": "^27.0.4",
+    "eslint-plugin-module-resolver": "^1.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
+    "jest": "^29.1.2",
+    "jetifier": "^2.0.0",
     "lint-staged": "^13.0.3",
-    "metro-react-native-babel-preset": "^0.72.1",
+    "metro-react-native-babel-preset": "^0.72.3",
     "patch-package": "^6.4.7",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "react-native-flipper": "^0.161.0",
+    "react-native-flipper": "^0.164.0",
+    "react-native-mmkv-flipper-plugin": "^1.0.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-query-native-devtools": "^4.0.0",
     "react-test-renderer": "18.2.0",
     "solidarity": "^3.0.4",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "jest": {
     "preset": "react-native"
